--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
             </div>
           </div>
           <div class="inner__copyrightSection">
-            <div>Terms of Use</div>
-            <div>Privacy Notice</div>
+            <a href="" class="link">Terms of Use</a>
+            <a href="" class="link">Privacy Notice</a>
             <div class="distance">
-              <div>Cookie Notice</div>
-              <div>©Zendesk 2023</div>
+              <a href="" class="link">Cookie Notice</a>
+              <a href="" class="link">©Zendesk 2023</a>
             </div>
           </div>
        </div>
