--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 encourage long-term loyalty.
               </div>
               <div class="inner__button">
-                <a href="" class="inner__link"> Conversational features </a>
+                <a href="#!" class="inner__link"> Conversational features </a>
                 <img src="the picturre/Frame (17).png" class="inner__arrow" />
               </div>
             </div>
@@ -86,7 +86,7 @@
                 and more on relationship building.
               </div>
               <div class="inner__button">
-                <a href="" class="inner__link"> Productivity features </a>
+                <a href="#!" class="inner__link"> Productivity features </a>
                 <img src="the picturre/Frame (17).png" class="inner__arrow" />
               </div>
             </div>
@@ -99,9 +99,8 @@
                 complete Sunshine platform.
               </div>
               <div class="inner__button">
-                <a href="" class="inner__link"> Zendesk platform </a>
-                <div class="inner__arrow"></div>
-                  <img src="the picturre/Frame (17).png" />
+                <a href="#!" class="inner__link"> Zendesk platform </a>
+                  <img src="the picturre/Frame (17).png" class="inner__arrow"/>
                 </div>
               </div>
             </div>
@@ -122,7 +121,7 @@
                 your tech stack to Zendesk, data is useful and usable.
               </div>
               <div class="inner__button">
-                <a href="" class="inner__link">Explore platform</a>
+                <a href="#!" class="inner__link">Explore platform</a>
                 <img src="the picturre/Frame (17).png" class="inner__arrow"/>
               </div>
           </div>
@@ -148,7 +147,7 @@
             <div class="inner__title--big">You’re safe with us</div>
             <div class="inner__content">Trusted by Fortune 100 companies, our privacy and data protection program includes a team dedicated to global compliance. We operate within all regulatory and industry frameworks—because software is only as good as its security.</div>
             <div class="inner__button">
-              <a href="" class="inner__link">Full compliance details</a>
+              <a href="#!" class="inner__link">Full compliance details</a>
               <img src="the picturre/Frame (17).png" class="inner__arrow">
             </div>
           </div>
@@ -171,7 +170,7 @@
                 <div class="inner__title">Bring your vision to life</div>
                 <div class="inner__content-1">Partner with our world-class experts to design and implement Zendesk. Our Professional Services team will give you the personalized service you need to reduce time-to-value and transform your service offerings.</div>
                 <div class="inner__button-1">
-                  <a href="" class="inner__link">Start the partnership</a>
+                  <a href="#!" class="inner__link">Start the partnership</a>
                   <img src="the picturre/Frame (17).png" class="inner__arrow">
                 </div>
               </div>
@@ -180,7 +179,7 @@
                 <div class="inner__title">Find your industry</div>
                 <div class="inner__content-2">We know every industry works a little differently. Whether you work in retail, manufacturing, financial services, or any other sector, our expertise will help you make the most of Zendesk.</div>
                 <div class="inner__button-2">
-                  <a href="" class="inner__link">View Zendesk industries</a>
+                  <a href="#!" class="inner__link">View Zendesk industries</a>
                   <img src="the picturre/Frame (17).png" class="inner__arrow">
                 </div>
               </div>  
@@ -207,7 +206,7 @@
                 <img src="the picturre/Frame (8).png" class="logo__5">
               </div>
               <div class="inner__warp">
-                <img src="the picturre/Frame (18).png" class="inner__sign--big">
+                <img src="the picturre/Frame (18).png" class="inner__sign-big">
               </div>
             </div>
             <div class="inner__content">
@@ -217,7 +216,7 @@
                 <div class="subtitle">Global manager of platform and service delivery</div>
               </div>
               <div class="button">
-                <a href="" class="link">Read more</a>
+                <a href="#!" class="link">Read more</a>
                 <img src="the picturre/Frame (17).png" class="arrow">
               </div>
               <div class="metrics">
@@ -361,11 +360,11 @@
             </div>
           </div>
           <div class="inner__copyrightSection">
-            <a href="" class="link">Terms of Use</a>
-            <a href="" class="link">Privacy Notice</a>
+            <a href="#!" class="link">Terms of Use</a>
+            <a href="#!" class="link">Privacy Notice</a>
             <div class="distance">
-              <a href="" class="link">Cookie Notice</a>
-              <a href="" class="link">©Zendesk 2023</a>
+              <a href="#!" class="link">Cookie Notice</a>
+              <a href="#!" class="link">©Zendesk 2023</a>
             </div>
           </div>
        </div>
