--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
             </div>
           </div>
         </div>
-        <img src="the picturre/Rectangle.png" alt="">
         </div>
+        <div><img src="the picturre/Rectangle.png" alt=""></div>
        <div class="box2">
           <div class="inner__information">
             <div class="inner__screen">
