--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
           </div>
         </div>
         </div>
-        <div><img src="the picturre/Rectangle.png" alt=""></div>
+        <img src="the picturre/Rectangle.png" alt="">
        <div class="box2">
           <div class="inner__information">
             <div class="inner__screen">
