--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
           </div>
         </div>
         </div>
-        <hr>
+        <hr class="footer__driver">
        <div class="box2">
           <div class="inner__information">
             <div class="inner__screen">
