--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
           <div class="inner__logo">
             <img src="the picturre/Frame (5).png" class="logo__1">
-            <img src="the picturre/Image (2).png" class="logo__2">
+            <img src="the picturre/Auto Layout Horizontal (7).png" class="logo__2">
           </div>
         </section>
       </div>
